--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,8 @@
   <body>
     <h1>Probando Yape </h1>
 
-
-    <script src="/static/jquery/dist/jquery.min.js"></script>
-    <script src="/static/materialize-css/dist/js/materialize.min.js"></script>
-    <script src="/static/js/main.js"></script>
-
+   <script src="/static/jquery/dist/jquery.min.js"></script>
+   <script src="/static/materialize-css/dist/js/materialize.min.js"></script>
+   <script src="/static/js/app.js"></script>
   </body>
 </html>
