Continuacion de maquetado

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <title>YAPE S6</title>
     <link rel="stylesheet" type="text/css" href="static/materialize-css/dist/css/materialize.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/icons/favicon1.jpg">
   </head>
 
   <body>
-
     <section id="carousel" class="container">
         <div class="carousel carousel-slider center row" data-indicators="true">
            <div class="carousel-item col s12" href="#one!">
@@ -31,12 +31,12 @@
          </div>
 
          <div class="carousel-fixed-item center col s12">
-           <a class="btn btn-large waves-effect boton-amarullo white-text darken-text-2 col s12">REGISTRARME</a>
+           <a class="btn btn-large waves-effect boton-amarillo white-text darken-text-2 col s12" href="views/a_validacionTelefono.html">REGISTRARME</a>
          </div>
-        </section>
+      </section>
 
-        <script src="static/jquery/dist/jquery.min.js"></script>
-    		<script src="static/materialize-css/dist/js/materialize.min.js"></script>
-    		<script src="static/assets/js/main.js"></script>
+    <script src="static/jquery/dist/jquery.min.js"></script>
+		<script src="static/materialize-css/dist/js/materialize.min.js"></script>
+		<script src="static/assets/js/main.js"></script>
   </body>
 </html>
